# tetris

./: CMakeLists.txt  Doxyfile  README.md
inc/: check.h  game.h  player.h  playground.h  square.h  tetrimino.h
src/: check.cpp  game.cpp  main.cpp  player.cpp  playground.cpp  square.cpp  tetrimino.cpp
